<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jentonlee.bathroom.MainActivity$PlaceholderFragment">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_switch"
        android:id="@+id/allSwitch"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sound Effects"
        android:layout_marginTop="@dimen/section_spacing"
        android:layout_below="@id/allSwitch"
        android:id="@+id/soundFX"
        android:textStyle="bold" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fan_switch"
        android:id="@+id/fanSwitch"
        android:layout_below="@id/soundFX"
        android:layout_marginTop="@dimen/switch_spacing"
        android:layout_alignParentLeft="true"
        android:checked="false" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flush_switch"
        android:id="@+id/flushSwitch"
        android:layout_below="@+id/fanSwitch"
        android:layout_alignParentLeft="true"
        android:checked="false" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faucet_switch"
        android:id="@+id/faucetSwitch"
        android:layout_below="@+id/flushSwitch"
        android:layout_alignParentLeft="true"
        />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hand_dryer_switch"
        android:id="@+id/handDryerSwitch"
        android:layout_below="@+id/faucetSwitch"
        android:layout_alignParentLeft="true"
        />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hand_wash_combo_switch"
        android:id="@+id/handWashComboSwitch"
        android:layout_below="@+id/handDryerSwitch"
        android:layout_alignParentLeft="true"
        />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paper_towels_switch"
        android:id="@+id/paperTowelsSwitch"
        android:layout_below="@+id/handWashComboSwitch"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_seekBar"
        android:id="@+id/textView3"
        android:layout_above="@+id/volumeSeekBar"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/volumeSeekBar"
        android:layout_marginBottom="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />




</RelativeLayout>
